<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view"
    >


    <group
        android:id="@+id/droup1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_register_address"
            android:checked="true"
            android:title="@string/home"
            />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_navigation_profile"
            android:title="@string/profile"
            />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_navigation_feedback"
            android:title="@string/feedback"
            />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_navigation_about_us"
            android:title="@string/about_us" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_navigation_exit"
            android:title="@string/exit" />
    </group>


</menu>
