<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    >


    <!--<ImageView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/d150"-->
        <!--android:src="@drawable/img_feedback"-->
        <!--android:layout_marginTop="@dimen/d50"-->
        <!--/>-->


    <EditText
        android:id="@+id/feedback_fragment_Et_user_name"
        android:hint="@string/user_name"
        style="@style/register_editText"
        android:inputType="text"
        android:layout_marginTop="@dimen/d20"
        android:drawableStart="@drawable/ic_username"
        />

    <EditText
        android:id="@+id/feedback_fragment_Et_mobile_number"
        android:hint="@string/mobile_number"
        style="@style/register_editText"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_mobile_number"
        />

    <EditText
        android:id="@+id/feedback_fragment_Et_message"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d150"
        android:gravity="center"
        android:layout_marginStart="@dimen/d10"
        android:layout_marginEnd="@dimen/d10"
        android:layout_marginTop="@dimen/d10"
        android:background="@drawable/shape_stroke_rectangle"
        android:hint="@string/tell_us_what_is_your_feedback_and_explain"
        android:textColor="@color/black"
        android:padding="@dimen/d10"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/register_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_send"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/d100"
        android:layout_marginEnd="@dimen/d100"
        android:background="@drawable/shape_sign_in_btn"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/d10"
        />


</LinearLayout>