<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_splash"
    >
    <ImageView
        android:id="@+id/splash_activity_iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/d200"
        android:contentDescription="@string/app_logo"
        android:layout_marginEnd="120dp"
        android:scaleType="fitXY"
        android:paddingEnd="@dimen/d20"
        android:layout_alignParentLeft="true"
        android:background="@drawable/app_logo"
        android:layout_centerVertical="true"
        android:paddingStart="@dimen/d20"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_activity_iv_logo"
        android:textSize="@dimen/s20"
        android:layout_marginTop="-70dp"
        android:layout_alignEnd="@id/splash_activity_iv_logo"
        android:layout_marginEnd="-10dp"
        android:maxLines="1"
        android:textColor="@color/white"
        android:fontFamily="@font/qsd"
        android:text="@string/slogan"
        />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/slogan"-->
        <!--android:layout_below="@id/splash_activity_iv_logo"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:textSize="@dimen/s20"-->
        <!--android:fontFamily="@font/redressed2"-->
        <!--android:layout_marginTop="-60dp"-->
        <!--android:textStyle="bold"-->
        <!--android:textColor="@color/dark_blue"-->
        <!--/>-->

    <ImageView
        android:id="@+id/splash_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/blue_point"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/d150"
        />



</RelativeLayout>